added jlink usage to build only the required jre