@@ -6,7 +6,22 @@ COPY . .
 
 RUN ./gradlew build -x test --no-daemon
 
-FROM eclipse-temurin:25-jre
+FROM eclipse-temurin:25 AS jre-build
+
+RUN $JAVA_HOME/bin/jlink \
+    --add-modules java.base,java.naming,java.logging,java.management,java.security.jgss,java.desktop,java.xml,java.instrument \
+    --strip-debug \
+    --no-man-pages \
+    --no-header-files \
+    --compress=2 \
+    --output /javaruntime
+
+FROM debian:bookworm-slim
+
+ENV JAVA_HOME=/opt/java/openjdk
+ENV PATH="${JAVA_HOME}/bin:${PATH}"
+
+COPY --from=jre-build /javaruntime $JAVA_HOME
 
 WORKDIR /app
 
